# habs

./: .gitignore  PKGS-TODO  README  README.md  build-pkgs  cblrepo.db  docker-build  makeahpkg  makeahsrc  makeworld  makeworld-ng
addlicenseinfo/: PKGBUILD
advgame/: PKGBUILD
afv/: PKGBUILD
agda-executable/: PKGBUILD
arbtt/: PKGBUILD
armada/: PKGBUILD
arrowp/: PKGBUILD
astrds/: PKGBUILD
augur/: PKGBUILD
babylon/: PKGBUILD
backdropper/: PKGBUILD  backdropper.install
bacteria/: PKGBUILD
baskell/: PKGBUILD
beautifhol/: PKGBUILD
befunge93/: PKGBUILD
berp/: PKGBUILD  berp.install
bidirectionalization-combined/: PKGBUILD
birdpp/: PKGBUILD
bla/: PKGBUILD
blogliterately/: PKGBUILD
bloxorz/: PKGBUILD
bluetile/: PKGBUILD
bnfc/: PKGBUILD
bookshelf/: PKGBUILD
breakout/: PKGBUILD
brians-brain/: PKGBUILD
c2hs/: PKGBUILD
cabal-rpm/: PKGBUILD
cabal-sort/: PKGBUILD
cabal2arch/: PKGBUILD
cabal2doap/: PKGBUILD
cabal2spec/: PKGBUILD
cabalgraph/: PKGBUILD
cap/: PKGBUILD
capri/: PKGBUILD
carboncopy/: PKGBUILD
cheatsheet/: PKGBUILD
clevercss/: PKGBUILD  clevercss.install
cltw/: PKGBUILD
clustertools/: PKGBUILD
combinatorrent/: PKGBUILD
conjure/: PKGBUILD  conjure.install
cpbrainfuck/: PKGBUILD
cpl/: PKGBUILD
cpphs/: PKGBUILD  cpphs.install
cpsa/: PKGBUILD
cspm-cspm/: PKGBUILD
cuboid/: PKGBUILD
dag-tournament/: PKGBUILD
darcs-benchmark/: PKGBUILD
darcs-beta/: PKGBUILD  darcs-beta.install
darcs-fastconvert/: PKGBUILD
darcs-graph/: PKGBUILD
darcs-monitor/: PKGBUILD
darcswatch/: PKGBUILD
datapacker/: PKGBUILD
defendtheking/: PKGBUILD
dephd/: PKGBUILD
derive/: PKGBUILD  derive.install
detrospector/: PKGBUILD
deunicode/: PKGBUILD
diffcabal/: PKGBUILD
distract/: PKGBUILD  distract.install
djinn/: PKGBUILD
docker/: Dockerfile  pacman.conf  sudoers
doctest/: PKGBUILD
drift-cabalized/: PKGBUILD
ehaskell/: PKGBUILD
elerea-examples/: PKGBUILD
emping/: PKGBUILD
equal-files/: PKGBUILD
estreps/: PKGBUILD
eternal10seconds/: PKGBUILD
explore/: PKGBUILD
fallingblocks/: PKGBUILD
feed-cli/: PKGBUILD
feed2lj/: PKGBUILD
flippi/: PKGBUILD
flower/: PKGBUILD
foo/: PKGBUILD
fquery/: PKGBUILD
fractal/: PKGBUILD
frag/: PKGBUILD
ftpline/: PKGBUILD
ftshell/: PKGBUILD
fungi/: PKGBUILD
funion/: PKGBUILD
gameclock/: PKGBUILD
gebop/: PKGBUILD
geniconvert/: PKGBUILD
gensmspdu/: PKGBUILD
ghc/: PKGBUILD  arch-gen-contents-index  build.mk  fix-gen_contents_index.patch  ghc-rebuild-doc-index.hook  ghc.install
ghc-core/: PKGBUILD
ghc-gc-tune/: PKGBUILD
ghc-mod/: PKGBUILD
ghci-haskeline/: PKGBUILD
gitit/: PKGBUILD  gitit.install
glome-hs/: PKGBUILD  glome-hs.install
graphmod/: PKGBUILD
graphtype/: PKGBUILD
greencard/: PKGBUILD  greencard.install
gt-tools/: PKGBUILD
guihaskell/: PKGBUILD
hackage-sparks/: PKGBUILD
hackage2twitter/: PKGBUILD
haddock/: PKGBUILD  haddock.install
haltavista/: PKGBUILD
happraise/: PKGBUILD
happs-tutorial/: PKGBUILD
hare/: PKGBUILD
hark/: PKGBUILD
hashell/: PKGBUILD
hask-home/: PKGBUILD
haskeem/: PKGBUILD
haskell-abortt-transformers/: PKGBUILD  haskell-abortt-transformers.install
haskell-ac-angle/: PKGBUILD  haskell-ac-angle.install
haskell-ac-colour/: PKGBUILD  haskell-ac-colour.install
haskell-ac-easyraster-gtk/: PKGBUILD  haskell-ac-easyraster-gtk.install
haskell-ac-halfinteger/: PKGBUILD  haskell-ac-halfinteger.install
haskell-ac-ppm/: PKGBUILD  haskell-ac-ppm.install
haskell-ac-vanillaarray/: PKGBUILD  haskell-ac-vanillaarray.install
haskell-ac-vector/: PKGBUILD  haskell-ac-vector.install
haskell-ac-vector-fancy/: PKGBUILD  haskell-ac-vector-fancy.install
haskell-accelerate/: PKGBUILD  haskell-accelerate.install
haskell-acme-dont/: PKGBUILD  haskell-acme-dont.install
haskell-acme-now/: PKGBUILD  haskell-acme-now.install
haskell-action-permutations/: PKGBUILD  haskell-action-permutations.install
haskell-actor/: PKGBUILD  haskell-actor.install
haskell-ad/: PKGBUILD  haskell-ad.install
haskell-adaptive/: PKGBUILD  haskell-adaptive.install
haskell-adaptive-containers/: PKGBUILD  haskell-adaptive-containers.install
haskell-adaptive-tuple/: PKGBUILD  haskell-adaptive-tuple.install
haskell-adhoc-network/: PKGBUILD  haskell-adhoc-network.install
haskell-aern-net/: PKGBUILD  haskell-aern-net.install
haskell-aern-real/: PKGBUILD  haskell-aern-real.install
haskell-aern-rntorm/: PKGBUILD  haskell-aern-rntorm.install
haskell-aern-rntorm-plot/: PKGBUILD  haskell-aern-rntorm-plot.install
haskell-aes/: PKGBUILD  haskell-aes.install
haskell-agata/: PKGBUILD  haskell-agata.install
haskell-agda/: PKGBUILD  haskell-agda.install
haskell-agi/: PKGBUILD  haskell-agi.install
haskell-agum/: PKGBUILD  haskell-agum.install
haskell-algebra/: PKGBUILD  haskell-algebra.install
haskell-aligned-foreignptr/: PKGBUILD  haskell-aligned-foreignptr.install
haskell-allocated-processor/: PKGBUILD  haskell-allocated-processor.install
haskell-alloy/: PKGBUILD  haskell-alloy.install
haskell-alloy-proxy-fd/: PKGBUILD  haskell-alloy-proxy-fd.install
haskell-alsa/: PKGBUILD  (+1 more)
haskell-alsa-core/: PKGBUILD  haskell-alsa-core.install
haskell-alsa-midi/: PKGBUILD  haskell-alsa-midi.install
haskell-alsa-seq/: PKGBUILD  haskell-alsa-seq.install
patches/: Agda-executable.cabal  Agda.cabal  Agda.pkgbuild  ConfigFile.pkgbuild  Crypto.source  DBus.cabal  DBus.pkgbuild  DBus.source  Encode.cabal  GLURaw.cabal  GLURaw.pkgbuild  GLUT.pkgbuild  Glob.source  Graphalyze.cabal  HDBC-postgresql.pkgbuild  JuicyPixels.cabal  MonadRandom.cabal  OpenGLRaw.cabal  OpenGLRaw.pkgbuild  QuickCheck.cabal  SDL-image.pkgbuild  SDL-ttf.pkgbuild  SDL-ttf.source  SDL.pkgbuild  Unixutils.pkgbuild  X11-xft.pkgbuild  X11.pkgbuild  aeson-compat.cabal  aeson.cabal  alsa-core.pkgbuild  alsa-mixer.pkgbuild  arbtt.pkgbuild  bifunctors.source  binary-tagged.cabal  blaze-builder-enumerator.cabal  buildwrapper.source  bytestring-lexing.pkgbuild  bytestring-show.cabal  c2hs.cabal  cabal-file-th.cabal  (+155 more)
(+3894 files in other folders)
