--- Agda.cabal.orig	2011-02-20 18:33:32.000000000 +0100
+++ Agda.cabal	2011-08-09 15:09:41.627900051 +0200
@@ -77,7 +77,7 @@
     build-depends:  epic >= 0.1.7 && < 0.2
   build-depends:    mtl == 2.0.*,
                     QuickCheck >= 2.3 && < 2.5,
-                    haskell-src-exts >= 1.9.6 && < 1.10,
+                    haskell-src-exts >= 1.9.6 && < 1.12,
                     containers >= 0.1.0 && < 1,
                     pretty >= 1 && < 2,
                     directory >= 1.0 && < 1.2,
@@ -90,7 +90,7 @@
                     process >= 1.0.1.0 && < 2,
                     haskeline >= 0.6.3.2 && < 0.7,
                     xhtml == 3000.2.*,
-                    syb >= 0.1 && < 0.3
+                    syb >= 0.3 && < 0.4
   build-tools:      happy >= 1.15 && < 2,
                     alex >= 2.0.1 && < 3
   extensions:       CPP
