Index: archhaskell/DBus.cabal
===================================================================
--- archhaskell.orig/DBus.cabal
+++ archhaskell/DBus.cabal
@@ -16,6 +16,7 @@ description:        Bindings for the D-B
 category:           Network, Desktop
 extra-source-files: configure configure.ac DBus.buildinfo.in
 extra-tmp-files:    autom4te.cache config.log config.status DBus.buildinfo
+pkgconfig-depends:  dbus-1
 
 library
     build-depends:      base >= 4.0 && < 5.0, bytestring
