--- Encode.cabal.orig	2011-08-16 11:03:58.461958029 +0200
+++ Encode.cabal	2011-08-16 11:03:44.051780625 +0200
@@ -9,7 +9,7 @@
 homepage:           http://ufal.mff.cuni.cz/~smrz/
 package-url:        http://sourceforge.net/projects/encode-arabic/
 category:           Text, Codec
-build-depends:      Cabal, base <= 4.2, mtl, containers
+build-depends:      Cabal, base < 4.4, mtl, containers
 build-type:         Simple
 synopsis:           Encoding character data
 description:        The "Encode" library provides a unified interface for
