Index: archhaskell-habs/GLURaw.cabal
===================================================================
--- archhaskell-habs.orig/GLURaw.cabal
+++ archhaskell-habs/GLURaw.cabal
@@ -54,7 +54,7 @@ library
       if os(darwin)
          frameworks: OpenGL
       else
-         extra-libraries: GLU
+         pkgconfig-depends: glu
 
 source-repository head
   type:     git
