Index: archhaskell/GLURaw.cabal
===================================================================
--- archhaskell.orig/GLURaw.cabal
+++ archhaskell/GLURaw.cabal
@@ -61,7 +61,7 @@ library
          if os(ios)
             frameworks: OpenGLES
          else
-            extra-libraries: GLU
+            pkgconfig-depends: glu
 
 source-repository head
   type:     git
