Index: archhaskell/Graphalyze.cabal
===================================================================
--- archhaskell.orig/Graphalyze.cabal
+++ archhaskell/Graphalyze.cabal
@@ -31,7 +31,7 @@ Library {
                          bktrees >= 0.2 && <0.4,
                          fgl >= 5.4.2.3 && < 5.5,
                          graphviz >= 2999.15 && < 2999.17,
-                         pandoc == 1.10.*,
+                         pandoc == 1.11.*,
                          text
 
         Exposed-Modules:     Data.Graph.Analysis
