Index: habs/MonadRandom.cabal
===================================================================
--- habs.orig/MonadRandom.cabal
+++ habs/MonadRandom.cabal
@@ -37,7 +37,6 @@ library
     transformers-compat >=0.4 && <0.6,
     mtl                 >=2.1 && <2.3,
     primitive           >=0.6 && <0.7,
-    fail                >=4.9        ,
     random
   ghc-options:         -Wall
   default-language:    Haskell2010
