Index: archhaskell/OpenGLRaw.cabal
===================================================================
--- archhaskell.orig/OpenGLRaw.cabal
+++ archhaskell/OpenGLRaw.cabal
@@ -272,7 +272,7 @@ library
          if os(ios)
             frameworks: OpenGLES
          else
-            extra-libraries: GL
+            pkgconfig-depends: gl
 
 source-repository head
   type:     git
