Index: habs/aeson-compat.cabal
===================================================================
--- habs.orig/aeson-compat.cabal
+++ habs/aeson-compat.cabal
@@ -37,7 +37,6 @@ library
     , containers               >=0.5  && <0.6
     , exceptions               >=0.8  && <0.9
     , hashable                 >=1.2  && <1.3
-    , nats                     >=1 && <1.2
     , scientific               >=0.3  && <0.4
     , text                     >=1.2  && <1.3
     , time                     >=1.4.2 && <1.7
@@ -64,7 +63,6 @@ test-suite aeson-compat-test
     , containers               >=0.5  && <0.6
     , exceptions               >=0.8  && <0.9
     , hashable                 >=1.2  && <1.3
-    , nats                     >=1 && <1.2
     , scientific               >=0.3  && <0.4
     , text                     >=1.2  && <1.3
     , time                     >=1.4.2 && <1.7
