Index: habs/aeson.cabal
===================================================================
--- habs.orig/aeson.cabal
+++ habs/aeson.cabal
@@ -94,7 +94,6 @@ library
     containers,
     deepseq,
     dlist >= 0.2,
-    fail == 4.9.*,
     ghc-prim >= 0.2,
     hashable >= 1.1.2.0,
     mtl,
@@ -109,7 +108,9 @@ library
 
   if !impl(ghc >= 8.0)
     -- `Data.Semigroup` is available in base only since GHC 8.0 / base 4.9
-    build-depends: semigroups >= 0.16.1 && < 0.19
+    build-depends:
+      semigroups >= 0.16.1 && < 0.19,
+      fail == 4.9.*
 
   if !impl(ghc >= 7.10)
     -- `Numeric.Natural` is available in base only since GHC 7.10 / base 4.8
