Index: habs/binary-tagged.cabal
===================================================================
--- habs.orig/binary-tagged.cabal
+++ habs/binary-tagged.cabal
@@ -38,7 +38,6 @@ library
     , containers               >=0.5  && <0.6
     , generics-sop             >=0.1  && <0.3
     , hashable                 >=1.2  && <1.3
-    , nats                     >=1    && <1.2
     , scientific               >=0.3  && <0.4
     , SHA                      >=1.6  && <1.7
     , semigroups               >=0.16 && <0.19
@@ -66,7 +65,6 @@ test-suite binary-tagged-test
     , containers               >=0.5  && <0.6
     , generics-sop             >=0.1  && <0.3
     , hashable                 >=1.2  && <1.3
-    , nats                     >=1    && <1.2
     , scientific               >=0.3  && <0.4
     , SHA                      >=1.6  && <1.7
     , semigroups               >=0.16 && <0.19
@@ -102,7 +100,6 @@ benchmark binary-tagged-bench
     , containers               >=0.5  && <0.6
     , generics-sop             >=0.1  && <0.3
     , hashable                 >=1.2  && <1.3
-    , nats                     >=1    && <1.2
     , scientific               >=0.3  && <0.4
     , SHA                      >=1.6  && <1.7
     , semigroups               >=0.16 && <0.19
