Index: archhaskell-habs/bytestring-show.cabal
===================================================================
--- archhaskell-habs.orig/bytestring-show.cabal
+++ archhaskell-habs/bytestring-show.cabal
@@ -45,7 +45,7 @@ library
 
     if impl(ghc >= 6.11) && !flag(integer-simple)
         cpp-options: -DINTEGER_GMP
-        build-depends: integer-gmp >= 0.2 && < 0.5
+        build-depends: integer-gmp >= 0.2 && < 0.6
 
     if impl(ghc >= 6.9) && impl(ghc < 6.11) && !flag(integer-simple)
         cpp-options: -DINTEGER_GMP
