Index: habs/c2hs.cabal
===================================================================
--- habs.orig/c2hs.cabal
+++ habs/c2hs.cabal
@@ -137,11 +137,11 @@ Test-Suite test-system
                        text,
                        transformers
 
-Executable regression-suite
-  build-depends:       base,
-                       filepath,
-                       shelly >= 1.0,
-                       text,
-                       yaml >= 0.8
-  hs-source-dirs:      tests
-  main-is:             regression-suite.hs
+-- Executable regression-suite
+--   build-depends:       base,
+--                        filepath,
+--                        shelly >= 1.0,
+--                        text,
+--                        yaml >= 0.8
+--   hs-source-dirs:      tests
+--   main-is:             regression-suite.hs
