Index: habs/cabal-install.cabal
===================================================================
--- habs.orig/cabal-install.cabal
+++ habs/cabal-install.cabal
@@ -123,8 +123,9 @@ executable cabal
         HTTP       >= 4000.0.8 && < 4001,
         mtl        >= 2.0      && < 3,
         network    >= 1        && < 3,
+        network-uri,
         pretty     >= 1        && < 1.2,
-        random     >= 1        && < 1.1,
+        random     >= 1        && < 1.2,
         stm        >= 2.0      && < 3,
         time       >= 1.1      && < 1.5,
         zlib       >= 0.5.3    && < 0.6
