Index: habs/cabal-install.cabal
===================================================================
--- habs.orig/cabal-install.cabal
+++ habs/cabal-install.cabal
@@ -138,7 +138,7 @@ executable cabal
         random     >= 1        && < 1.2,
         stm        >= 2.0      && < 3,
         time       >= 1.1      && < 1.6,
-        zlib       >= 0.5.3    && < 0.6
+        zlib       >= 0.5.3    && < 0.7
 
     if flag(old-directory)
       build-depends: directory >= 1 && < 1.2, old-time >= 1 && < 1.2,
