--- cake.cabal.orig	2011-08-16 11:12:26.921556392 +0200
+++ cake.cabal	2011-08-16 11:10:38.076880103 +0200
@@ -17,11 +17,11 @@
   build-depends: base==4.*
   build-depends: derive==2.5.*
   build-depends: mtl==2.0.*
-  build-depends: filepath==1.1.*  
+  build-depends: filepath >=1.1 && <1.3
   build-depends: process==1.0.*
   build-depends: binary==0.5.*
-  build-depends: containers==0.3.*
-  build-depends: directory==1.0.*
+  build-depends: containers >=0.3 && <0.5
+  build-depends: directory >=1.0 && <1.2
   build-depends: Encode==1.3.* 
   -- Encode contains a copy of parsek
   build-depends: bytestring==0.9.*
