Index: habs/data-accessor-template.cabal
===================================================================
--- habs.orig/data-accessor-template.cabal
+++ habs/data-accessor-template.cabal
@@ -43,7 +43,7 @@ Library
   If impl(ghc)
     If impl(ghc >= 6.12)
       Hs-Source-Dirs: src-5
-      Build-Depends:  template-haskell >=2.4 && <2.11
+      Build-Depends:  template-haskell >=2.4 && <2.12
     Else
       Hs-Source-Dirs: src-3
       Build-Depends:  template-haskell >=2.2 && <2.4
