Index: habs/fast-logger.cabal
===================================================================
--- habs.orig/fast-logger.cabal
+++ habs/fast-logger.cabal
@@ -26,7 +26,6 @@ Library
                       , auto-update >= 0.1.2
                       , easy-file >= 0.2
                       , bytestring
-                      , bytestring-builder
                       , directory
                       , filepath
                       , text
