Index: habs/ghc-mod.cabal
===================================================================
--- habs.orig/ghc-mod.cabal
+++ habs/ghc-mod.cabal
@@ -75,11 +75,7 @@ Library
                       , syb
                       , time
                       , transformers
-  if impl(ghc < 7.7)
-    Build-Depends:      convertible
-                      , Cabal >= 1.10 && < 1.17
-  else
-    Build-Depends:      Cabal >= 1.18
+                      , Cabal >= 1.18
 
 Executable ghc-mod
   Default-Language:     Haskell2010
@@ -143,13 +139,7 @@ Test-Suite spec
                       , time
                       , transformers
                       , hspec >= 1.7.1
-  if impl(ghc < 7.7)
-    Build-Depends:      convertible
-                      , Cabal >= 1.10 && < 1.17
-  else
-    Build-Depends:      Cabal >= 1.18
-  if impl(ghc < 7.6.0)
-    Build-Depends:      executable-path
+                      , Cabal >= 1.18
 
 Source-Repository head
   Type:                 git
