Index: archhaskell/git-annex.cabal
===================================================================
--- archhaskell.orig/git-annex.cabal
+++ archhaskell/git-annex.cabal
@@ -27,33 +27,44 @@ Description:
 
 Flag S3
   Description: Enable S3 support
+  Manual: True
 
 Flag WebDAV
   Description: Enable WebDAV support
+  Default: False
+  Manual: True
 
 Flag Inotify
   Description: Enable inotify support
+  Manual: True
 
 Flag Dbus
   Description: Enable dbus support
+  Manual: True
 
 Flag Assistant
   Description: Enable git-annex assistant and watch command
+  Default: False
 
 Flag Webapp
   Description: Enable git-annex webapp
+  Default: False
 
 Flag Pairing
   Description: Enable pairing
+  Default: False
 
 Flag XMPP
   Description: Enable notifications using XMPP
+  Default: False
 
 Flag DNS
   Description: Enable the haskell DNS library for DNS lookup
+  Default: False
 
 Flag Production
   Description: Enable production build (slower build; faster binary)
+  Manual: True
 
 Flag Android
   Description: Building for Android
@@ -61,9 +72,11 @@ Flag Android
 
 Flag TestSuite
   Description: Embed the test suite into git-annex
+  Default: False
 
 Flag TDFA
   Description: Use regex-tdfa for wildcards
+  Manual: True
 
 Executable git-annex
   Main-Is: git-annex.hs
