Index: archhaskell/graphviz.cabal
===================================================================
--- archhaskell.orig/graphviz.cabal
+++ archhaskell/graphviz.cabal
@@ -58,16 +58,16 @@ Library {
                            containers,
                            process,
                            directory,
-                           temporary >=1.1 && <1.2,
+                           temporary >=1.1 && <1.3,
                            fgl == 5.4.*,
                            filepath,
-                           polyparse >= 1.7 && < 1.9,
+                           polyparse >= 1.7 && < 1.10,
                            bytestring >= 0.9 && < 0.11,
                            colour == 2.3.*,
                            transformers >= 0.2 && < 0.4,
                            text,
                            wl-pprint-text >= 1.1.0.0 && < 1.2.0.0,
-                           dlist == 0.5.*
+                           dlist == 0.6.*
 
         Exposed-Modules:   Data.GraphViz
                            Data.GraphViz.Types
