Index: habs/gtk2hs-buildtools.cabal
===================================================================
--- habs.orig/gtk2hs-buildtools.cabal
+++ habs/gtk2hs-buildtools.cabal
@@ -42,7 +42,7 @@ Library
                          filepath, random,
                          Cabal >= 1.24.0.0 && < 1.25,
                          filepath >= 1.3.0.0 && < 1.5,
-                         directory >= 1.2.0.0 && < 1.3,
+                         directory >= 1.2.0.0 && < 1.4,
                          containers >= 0.5.5.1 && < 0.6
         if impl(ghc >= 7.7)
           build-depends: hashtables
