Index: habs/haddock-api.cabal
===================================================================
--- habs.orig/haddock-api.cabal
+++ habs/haddock-api.cabal
@@ -49,7 +49,7 @@ library
     , xhtml >= 3000.2 && < 3000.3
     , Cabal >= 1.10
     , ghc-boot
-    , ghc >= 8.0 && < 8.0.2
+    , ghc == 8.0.*
 
     , ghc-paths
     , haddock-library == 1.4.*
