Index: habs/hakyll.cabal
===================================================================
--- habs.orig/hakyll.cabal
+++ habs/hakyll.cabal
@@ -156,7 +156,7 @@ Library
     mtl             >= 1       && < 2.3,
     network         >= 2.6     && < 2.7,
     network-uri     >= 2.6     && < 2.7,
-    pandoc          >= 1.14    && < 1.15,
+    pandoc          >= 1.14    && < 1.16,
     pandoc-citeproc >= 0.4     && < 0.8,
     parsec          >= 3.0     && < 3.2,
     process         >= 1.0     && < 1.3,
@@ -241,7 +241,7 @@ Test-suite hakyll-tests
     mtl             >= 1       && < 2.3,
     network         >= 2.6     && < 2.7,
     network-uri     >= 2.6     && < 2.7,
-    pandoc          >= 1.14    && < 1.15,
+    pandoc          >= 1.14    && < 1.16,
     pandoc-citeproc >= 0.4     && < 0.8,
     parsec          >= 3.0     && < 3.2,
     process         >= 1.0     && < 1.3,
