Index: habs/hakyll.cabal
===================================================================
--- habs.orig/hakyll.cabal
+++ habs/hakyll.cabal
@@ -143,14 +143,14 @@ Library
 
   Build-Depends:
     base                 >= 4.8    && < 5,
-    binary               >= 0.5    && < 0.8,
+    binary               >= 0.5    && < 0.9,
     blaze-html           >= 0.5    && < 0.9,
     blaze-markup         >= 0.5.1  && < 0.8,
     bytestring           >= 0.9    && < 0.11,
     cmdargs              >= 0.10   && < 0.11,
     containers           >= 0.3    && < 0.6,
     cryptohash           >= 0.7    && < 0.12,
-    data-default         >= 0.4    && < 0.7,
+    data-default         >= 0.4    && < 0.8,
     deepseq              >= 1.3    && < 1.5,
     directory            >= 1.0    && < 1.3,
     filepath             >= 1.0    && < 1.5,
@@ -159,9 +159,9 @@ Library
     network              >= 2.6    && < 2.7,
     network-uri          >= 2.6    && < 2.7,
     pandoc               >= 1.14   && < 1.18,
-    pandoc-citeproc      >= 0.4    && < 0.10,
+    pandoc-citeproc      >= 0.4    && < 0.11,
     parsec               >= 3.0    && < 3.2,
-    process              >= 1.0    && < 1.3,
+    process              >= 1.0    && < 1.5,
     random               >= 1.0    && < 1.2,
     regex-base           >= 0.93   && < 0.94,
     regex-tdfa           >= 1.1    && < 1.3,
@@ -169,7 +169,7 @@ Library
     scientific           >= 0.3.4  && < 0.4,
     tagsoup              >= 0.13.1 && < 0.14,
     text                 >= 0.11   && < 1.3,
-    time                 >= 1.4    && < 1.6,
+    time                 >= 1.4    && < 1.7,
     time-locale-compat   >= 0.1    && < 0.2,
     unordered-containers >= 0.2    && < 0.3,
     vector               >= 0.11   && < 0.12,
@@ -234,14 +234,14 @@ Test-suite hakyll-tests
     test-framework-quickcheck2 >= 0.3 && < 0.4,
     -- Copy pasted from hakyll dependencies:
     base                 >= 4.8    && < 5,
-    binary               >= 0.5    && < 0.8,
+    binary               >= 0.5    && < 0.9,
     blaze-html           >= 0.5    && < 0.9,
     blaze-markup         >= 0.5.1  && < 0.8,
     bytestring           >= 0.9    && < 0.11,
     cmdargs              >= 0.10   && < 0.11,
     containers           >= 0.3    && < 0.6,
     cryptohash           >= 0.7    && < 0.12,
-    data-default         >= 0.4    && < 0.7,
+    data-default         >= 0.4    && < 0.8,
     deepseq              >= 1.3    && < 1.5,
     directory            >= 1.0    && < 1.3,
     filepath             >= 1.0    && < 1.5,
@@ -250,9 +250,9 @@ Test-suite hakyll-tests
     network              >= 2.6    && < 2.7,
     network-uri          >= 2.6    && < 2.7,
     pandoc               >= 1.14   && < 1.18,
-    pandoc-citeproc      >= 0.4    && < 0.10,
+    pandoc-citeproc      >= 0.4    && < 0.11,
     parsec               >= 3.0    && < 3.2,
-    process              >= 1.0    && < 1.3,
+    process              >= 1.0    && < 1.5,
     random               >= 1.0    && < 1.2,
     regex-base           >= 0.93   && < 0.94,
     regex-tdfa           >= 1.1    && < 1.3,
@@ -260,7 +260,7 @@ Test-suite hakyll-tests
     scientific           >= 0.3.4  && < 0.4,
     tagsoup              >= 0.13.1 && < 0.14,
     text                 >= 0.11   && < 1.3,
-    time                 >= 1.4    && < 1.6,
+    time                 >= 1.4    && < 1.7,
     time-locale-compat   >= 0.1    && < 0.2,
     unordered-containers >= 0.2    && < 0.3,
     vector               >= 0.11   && < 0.12,
