Index: habs/hakyll.cabal
===================================================================
--- habs.orig/hakyll.cabal
+++ habs/hakyll.cabal
@@ -158,7 +158,7 @@ Library
     cryptohash           >= 0.7    && < 0.12,
     data-default         >= 0.4    && < 0.8,
     deepseq              >= 1.3    && < 1.5,
-    directory            >= 1.0    && < 1.3,
+    directory            >= 1.0    && < 1.4,
     filepath             >= 1.0    && < 1.5,
     lrucache             >= 1.1.1  && < 1.3,
     mtl                  >= 1      && < 2.3,
@@ -251,7 +251,7 @@ Test-suite hakyll-tests
     cryptohash           >= 0.7    && < 0.12,
     data-default         >= 0.4    && < 0.8,
     deepseq              >= 1.3    && < 1.5,
-    directory            >= 1.0    && < 1.3,
+    directory            >= 1.0    && < 1.4,
     filepath             >= 1.0    && < 1.5,
     lrucache             >= 1.1.1  && < 1.3,
     mtl                  >= 1      && < 2.3,
@@ -312,7 +312,7 @@ Executable hakyll-init
 
   Build-depends:
     base      >= 4   && < 5,
-    directory >= 1.0 && < 1.3,
+    directory >= 1.0 && < 1.4,
     filepath  >= 1.0 && < 1.5
 
   Other-modules:
