Index: archhaskell/haskell-src-meta.cabal
===================================================================
--- archhaskell.orig/haskell-src-meta.cabal
+++ archhaskell/haskell-src-meta.cabal
@@ -23,7 +23,7 @@ library
                    haskell-src-exts >= 1.8 && < 1.14,
                    pretty >= 1.0 && < 1.2,
                    syb >= 0.1 && < 0.5,
-                   th-orphans >= 0.5 && < 0.7
+                   th-orphans >= 0.5 && < 0.8
 
   if impl(ghc >= 7.4)
     Build-depends: template-haskell >= 2.7 && < 2.9
