Index: habs/hasktags.cabal
===================================================================
--- habs.orig/hasktags.cabal
+++ habs/hasktags.cabal
@@ -62,7 +62,7 @@ library
     utf8-string,
     base >= 4 && < 5,
     bytestring >= 0.9 && < 0.11,
-    directory >= 1.1 && < 1.3,
+    directory >= 1.1 && < 1.4,
     filepath,
     json >= 0.5 && < 0.10
 
